// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleImage should render image alt, title, className and and caption 1`] = `
<DocumentFragment>
  <div
    class="test-class ifu-loader__rings"
  >
    <div
      class="flex absolute justify-items-center items-center w-full h-full"
    >
      <div
        class="scale-75 lg:scale-100 ifu-loader__image--ripple"
      >
        <div />
        <div />
      </div>
    </div>
    <span
      style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
    >
      <img
        alt="alt"
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: cover;"
        title="title-big"
      />
      <noscript />
    </span>
  </div>
  <p
    class="mt-2 text-body-small text-gray-dark"
  >
    caption-big
  </p>
</DocumentFragment>
`;

exports[`ArticleImage should render use layout="fill" as default and ignore heigh and width 1`] = `
<DocumentFragment>
  <div
    class="ifu-loader__rings"
  >
    <div
      class="flex absolute justify-items-center items-center w-full h-full"
    >
      <div
        class="scale-75 lg:scale-100 ifu-loader__image--ripple"
      >
        <div />
        <div />
      </div>
    </div>
    <span
      style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
    >
      <img
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: cover;"
      />
      <noscript />
    </span>
  </div>
</DocumentFragment>
`;

exports[`ArticleImage should require height and width for other layouts and throw an error if they are missing 1`] = `
<DocumentFragment>
  <div
    class="ifu-loader__rings"
  >
    <div
      class="flex absolute justify-items-center items-center w-full h-full"
    >
      <div
        class="scale-75 lg:scale-100 ifu-loader__image--ripple"
      >
        <div />
        <div />
      </div>
    </div>
    <span
      style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative;"
    >
      <span
        style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 25.495049504950494% 0px 0px 0px;"
      />
      <img
        data-nimg="responsive"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: cover;"
      />
      <noscript />
    </span>
  </div>
</DocumentFragment>
`;

exports[`ArticleImage should use objectFit="contain" if width < height 1`] = `
<DocumentFragment>
  <div
    class="ifu-loader__rings"
  >
    <div
      class="flex absolute justify-items-center items-center w-full h-full"
    >
      <div
        class="scale-75 lg:scale-100 ifu-loader__image--ripple"
      >
        <div />
        <div />
      </div>
    </div>
    <span
      style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
    >
      <img
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
      />
      <noscript />
    </span>
  </div>
</DocumentFragment>
`;

exports[`ArticleImage should use objectFit="hover" if width >= height 1`] = `
<DocumentFragment>
  <div
    class="ifu-loader__rings"
  >
    <div
      class="flex absolute justify-items-center items-center w-full h-full"
    >
      <div
        class="scale-75 lg:scale-100 ifu-loader__image--ripple"
      >
        <div />
        <div />
      </div>
    </div>
    <span
      style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
    >
      <img
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: cover;"
      />
      <noscript />
    </span>
  </div>
</DocumentFragment>
`;

exports[`ImageBlock should render the given image inside a Block 1`] = `
<DocumentFragment>
  <div
    class="mx-6 lg:mx-12 xl:mx-28 2xl:mx-48 3xl:ms-64 3xl:max-w-4xl my-16"
  >
    <div
      class="overflow-hidden relative bg-gray-white rounded aspect-video ifu-loader__rings"
    >
      <div
        class="flex absolute justify-items-center items-center w-full h-full"
      >
        <div
          class="scale-75 lg:scale-100 ifu-loader__image--ripple"
        >
          <div />
          <div />
        </div>
      </div>
      <span
        style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
      >
        <img
          alt="alt"
          data-nimg="fill"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: cover;"
          title="title"
        />
        <noscript />
      </span>
    </div>
    <p
      class="mt-2 text-body-small text-gray-dark"
    >
      caption
    </p>
  </div>
</DocumentFragment>
`;
